fixed nav height on mobile

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ img{
     .nav-links{
         position: absolute;
         right: 0px;
-        height: 30vh;
+        height: 35vh;
         /* top: 39px; */
         top: 5vh;
         width: 100vw;
